--- a/refs.bib
+++ b/refs.bib
@@ -6,3 +6,33 @@
   year={2020},
   organization={Springer}
 }
+@inproceedings{shmueli2025one,
+  title={On One-Shot Signatures, Quantum vs. Classical Binding, and Obfuscating Permutations},
+  author={Shmueli, Omri and Zhandry, Mark},
+  booktitle={Annual International Cryptology Conference},
+  pages={350--383},
+  year={2025},
+  organization={Springer}
+}
+@inproceedings{amos2020one,
+  title={One-shot signatures and applications to hybrid quantum/classical authentication},
+  author={Amos, Ryan and Georgiou, Marios and Kiayias, Aggelos and Zhandry, Mark},
+  booktitle={Proceedings of the 52nd Annual ACM SIGACT Symposium on Theory of Computing},
+  pages={255--268},
+  year={2020}
+}
+@article{laing2018survey,
+  title={A survey and refinement of repairable threshold schemes},
+  author={Laing, Thalia M and Stinson, Douglas R},
+  journal={Journal of Mathematical Cryptology},
+  volume={12},
+  number={1},
+  pages={57--81},
+  year={2018}
+}
+@inproceedings{pkc-2024-34093,
+  title={One-shot Signatures: Applications and Design Directions},
+  note={Invited talk},
+  author={Aggelos Kiayias},
+  year=2024
+}
