--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,8 @@ Our treatment follows the relaxed OSS notion ~\cite{pkc-2024-34093}, instantiati
 
 \section{Introduction}
 \paragraph{Motivation.}
-OSS capture a powerful capability: make \emph{exactly-one} valid signature and then render any further signing infeasible. This single-use authenticity primitive cleanly abstracts (i) deterministic finality (each height signs once), (ii) quantum money (mint once, then unforgeable), and (iii) trusted-setup-free SNARK parameters (derive a CRS and then provably erase toxic waste). Yet today’s OSSs require quantum unclonability; TEEs offer a practical path but single-enclave designs reduce the guarantee to “trust this one box forever”.
+One-shot signatures (OSS) promise \emph{exactly-one} valid signature and then render any further signing infeasible, underpinning applications like quantum-money–flavored assets and ceremony-free Groth16 CRS. Pure OSS realizations rely on quantum unclonability; TEE-based attempts exist but typically use a single enclave, making certified deletion both hard and brittle. While supply-chain hardening and reproducible builds are crucial, defense-in-depth via \emph{heterogeneous} enclaves gives additive security. The tension is that unclonability prefers no replication, whereas robustness prefers multiple TEEs; QuanTEEum reconciles this by DKG-first key sharing, a one-shot latch, and \emph{certified deletion} with verifier-checked freshness. We adopt the \emph{relaxed OSS} viewpoint (Kiayias, PKC’24 invited): enforce one-shotness via TEE-backed deletion today, with a clean upgrade path to quantum OSS back ends tomorrow.
+
 
 \paragraph{Our approach.}
 \prot{} lifts OSS to an \emph{honest-minority} setting by distributing the signing key across independent enclaves using a threshold DKG. The system produces one threshold signature on a frozen message and then aggregates per-enclave certified-deletion attestations bound to the session. The exact-one property reduces to the infeasibility of recovering a deleted threshold share from \emph{at least one} honest enclave, plus freshness/anti-replay for attestations.
